# INS_UWB_cooperative_localization

./: CMakeLists.txt  README.md
config/: default.yaml
include/: common_include.h  config.h  cooperative.h  measurement.h  relative_measurement.h  state.h
include/coop/: connector.h  cooperative.h  measurement_model.h  relative_measurement.h
include/inertial/: inertial_nav.h
src/: CMakeLists.txt  config.cpp  connector.cpp  cooperative.cpp  inertial_nav.cpp  measurement_model.cpp
test/: CMakeLists.txt  run_cl.cpp
